# test-flasky

./: .gitignore  README.md  pyproject.toml  run.sh
core/clients/: api_client.py  middlewares.py
core/entities/: user.py
core/models/: base_models.py  token.py  users.py
core/test_data/: assertions.py  expectations.py
core/utils/: utils.py
tests/: conftest.py
tests/auth_register/: conftest.py  test_login.py  test_register.py
tests/users/: test_update_users.py  test_users.py
tests/users/data/: expectations.py
